--- a/demo/index.html
+++ b/demo/index.html
@@ -1,30 +1,40 @@
 <!doctype html>
 <html lang="en-GB">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <style>
-    body {
-      background: #fafafa;
-    }
-  </style>
-</head>
-<body>
-  <div id="demo"></div>
-
-  <script type="module">
-    import { html, render } from 'lit';
-    import '../dist/src/searchable-dropdown.js';
-
-    const header = 'Hello owc World!';
-    render(
-      html`
-        <searchable-dropdown .header=${header}>
-          some light-dom
-        </searchable-dropdown>
-      `,
-      document.querySelector('#demo')
-    );
-  </script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
+    <style>
+      body {
+        background: #fafafa;
+      }
+    </style>
+    <script type="module" src="../dist/src/searchable-dropdown.js"></script>
+  </head>
+  <body>
+    <searchable-dropdown id="my-combobox"></searchable-dropdown>
+    <p>Selected fruit: <span id="selected-fruit"></span></p>
+    <script>
+      const combobox = document.getElementById('my-combobox');
+      // Set the options list
+      combobox.optionsList = [
+        'banana',
+        'apple',
+        'orange',
+        'pear',
+        'pineapple',
+        'strawberry',
+        'watermelon',
+      ];
+      // Listen for the selected option event
+      combobox.addEventListener('selected-option', event => {
+        console.log(event.detail.value);
+        // Update the selected fruit text
+        document.getElementById('selected-fruit').textContent =
+          event.detail.value;
+      });
+    </script>
+  </body>
 </html>
